Logo image aligned correctly

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,26 @@ body {
     padding: 0px;
 }
 
+header {
+    background-color: #0C59CF; 
+    height: 200px;
+    margin:0%;
+    padding:0px;
+}
+
+.banner img {
+    padding-left: 25px;
+    padding-top: 25px;
+    width: 100px;
+    height: 100px;
+}
+
+.press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 h1 {
     color:white;
     font-family: "Press Start 2P", system-ui;
@@ -11,21 +31,8 @@ h1 {
     font-size:36px;
     text-shadow: 0px 5px 5px rgb(0, 0, 0);
     /* refactor later */
-    padding-top: 0px;
+    padding-top: 75px;
     padding-left: 0px;
     
 }
-
-header {
-    background-color: #0C59CF; 
-    height: 200px;
-    margin:0%;
-    padding:0px;
-}
-
-.press-start-2p-regular {
-    font-family: "Press Start 2P", system-ui;
-    font-weight: 400;
-    font-style: normal;
-  }
 
